--- a/week06/solutions.ipynb
+++ b/week06/solutions.ipynb
@@ -5,291 +5,7 @@
    "id": "70d48a2d",
    "metadata": {},
    "source": [
-    "# Assignment 04: Single-source shortest path\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acc7b6be",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Codebase\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "042117e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fmt: off\n",
-    "\n",
-    "def sssp(s, G):\n",
-    "    n: int = len(G)                         # Shortcut to size of graph\n",
-    "    no_edge = G[0][0]                       # Shortcut to absence of edge\n",
-    "    oo = float(\"inf\")                       # Shortcut to infinity\n",
-    "    d: list = [oo for _ in range(n)]        # Assume looooong distances\n",
-    "    d[s] = 0                                # Source distance to itself\n",
-    "    bag = [s]                               # Start from source\n",
-    "    while len(bag) > 0:                     # While bag not empty\n",
-    "        u = bag.pop()                       # Take a vertex out of bag\n",
-    "        for v in range(n):                  # Find u's neighbors\n",
-    "            if G[u][v] != no_edge:          # There is an edge (u,v)\n",
-    "                if d[v] > d[u] + G[u][v]:   # Is edge (u,v) tense?\n",
-    "                    d[v] = d[u] + G[u][v]   # Relax the edge\n",
-    "                    bag.append(v)           # Explore v next\n",
-    "    return d                                # Shortest path distances\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "627e40ed",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "The code above is far from perfect but it works as long as there are no cycles in the graph.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10d18b93",
-   "metadata": {},
-   "source": [
-    "### Part 1: reconstruct the shortest paths\n",
-    "\n",
-    "The code above produces a list `d` with the shortest path distances from a source vertex $s$ to any vertex in the graph.\n",
-    "\n",
-    "Write a method with the following header\n",
-    "\n",
-    "```python\n",
-    "reconstruct(d: list[int], s: int, graph: list[list[int]]) -> list[int]\n",
-    "```\n",
-    "\n",
-    "that returns a list of `p` such that `p[u]` is the predecessor of `u` in the shortedt path from the source vertex (`s`) to `u`. \n",
-    "\n",
-    "**In practice,** methods `sssp` and `reconstruct_path` are combined into a single method. Such a method is given at the end of this solutions notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fe7c9ba3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reconstruct_path(d: list[int], s: int, graph: list[list[int]]) -> list[int]:\n",
-    "    # Shortcut to size of graph\n",
-    "    n: int = len(graph)\n",
-    "    # Shortcut to infinity \n",
-    "    oo: int = float(\"inf\")\n",
-    "    # Shortcut to no edge\n",
-    "    no_edge: int = graph[0][0]\n",
-    "    # Initialize list of predecessors to None (no predecessor)\n",
-    "    pred: list[int | None] = [None for _ in range(n)]\n",
-    "    # Traverse vertices in order of index and trace back\n",
-    "    # their predecessors.\n",
-    "    v: int = 0\n",
-    "    while v < n:\n",
-    "        # No need to trace back source vertex\n",
-    "        if v != s: \n",
-    "            # Find all the neighbors of v; one of them is\n",
-    "            # the predecessor of v along the shortest path from s to v.\n",
-    "            # Once that predecessor is found, the search of v'set\n",
-    "            # neighbors can stop.\n",
-    "            u: int = 0\n",
-    "            while u < n and pred[v] is None:\n",
-    "                # Variable for the weight of edge (u,v) makes code readable\n",
-    "                weight: int = graph[u][v]\n",
-    "                # check that edge exists in the input graph and\n",
-    "                # that u is readhable from s(i.e., d[u] != oo) before \n",
-    "                # checking if u is v's predecessor\n",
-    "                if weight != 0 and d[u] != oo:\n",
-    "                    # Check is edg (u,v) is relaxed; \n",
-    "                    # if it is, then u is v's predecessor\n",
-    "                    if d[v] == d[u] + weight:\n",
-    "                        pred[v] = u\n",
-    "                # Increment u to check next neighbor of v for inner loop\n",
-    "                u += 1\n",
-    "        # Increment v to check next vertex for outer loop\n",
-    "        v += 1\n",
-    "    # Done\n",
-    "    return pred\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63d50c13",
-   "metadata": {},
-   "source": [
-    "### Part 2: report about the shortest paths\n",
-    "\n",
-    "Write a method with header\n",
-    "\n",
-    "```python\n",
-    "report_sssp(p: list[int], d: list[int], graph: list[list[int]]) -> None\n",
-    "```\n",
-    "\n",
-    "that prints the shortest path to every vertex in the graph, from the source vertex. For example, the shortest path to vertex 7 is `0 -> 2 -> 3 -> 5 -> 6 -> 7`\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ad852d46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def report_sssp(p: list[int], d: list[int], graph: list[list[int]]) -> None:\n",
-    "    NO_EDGE: int = graph[0][0]\n",
-    "    NO_PATH: str = \"No path exists from {} to {}.\"\n",
-    "    SOURCE_VERTEX: str = \"{} is the source vertex\"\n",
-    "    oo:int = float(\"inf\")\n",
-    "    n: int = len(graph)\n",
-    "    # Find the source vertex first, by looking for the vertex with no predecessor\n",
-    "    s: int = 0\n",
-    "    while s < n and p[s] is not None:\n",
-    "        s += 1\n",
-    "    print(f\"source vertex is {s}\")\n",
-    "    # Exlore each vertex v in order of index and report the path from s to v\n",
-    "    for v in range(n):\n",
-    "        if v== s:\n",
-    "            # Special handling for source vertex\n",
-    "            print(SOURCE_VERTEX.format(s))\n",
-    "        else:\n",
-    "            # For the rest of the vertices, first we need to determine\n",
-    "            # if there is a path from s to v by checking if d[v] is infinity\n",
-    "            # if there is no path, report that fact; otherwise, trace back the path\n",
-    "            if d[v] == oo:\n",
-    "                print(NO_PATH.format(s, v))\n",
-    "            else:\n",
-    "                # Traceback the path from s to v using the list of predecessors p\n",
-    "                path: list[int] = []\n",
-    "                u: int = v\n",
-    "                while u != s:\n",
-    "                    path.append(u)\n",
-    "                    u = p[u]\n",
-    "                path.append(s)\n",
-    "                path.reverse()\n",
-    "                print(f\"path from {s} to {v}: {path}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f264f4fd",
-   "metadata": {},
-   "source": [
-    "\n",
-    "---\n",
-    "\n",
-    "# Test\n",
-    "\n",
-    "![](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/graphs/dag_sssp.png)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f26dee23",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sp_distances=[0, 5, 1, 2, 10, 3, 4, 5]\n",
-      "sp_predecessors=[None, 0, 0, 2, 0, 3, 5, 6]\n",
-      "source vertex is 0\n",
-      "0 is the source vertex\n",
-      "path from 0 to 1: [0, 1]\n",
-      "path from 0 to 2: [0, 2]\n",
-      "path from 0 to 3: [0, 2, 3]\n",
-      "path from 0 to 4: [0, 4]\n",
-      "path from 0 to 5: [0, 2, 3, 5]\n",
-      "path from 0 to 6: [0, 2, 3, 5, 6]\n",
-      "path from 0 to 7: [0, 2, 3, 5, 6, 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# fmt: off\n",
-    "graph = [\n",
-    "    #0   1   2   3   4   5   6   7\n",
-    "    [0,  5,  1,  5, 10,  0,  0,  0],  # 0\n",
-    "    [0,  0, 12,  5,  6,  0,  0,  0],  # 1\n",
-    "    [0,  0,  0,  1,  0,  0,  5,  0],  # 2\n",
-    "    [0,  0,  0,  0,  0,  1,  5,  0],  # 3\n",
-    "    [0,  0,  0,  6,  0,  5,  0,  5],  # 4\n",
-    "    [0,  0,  0,  0,  0,  0,  1,  5],  # 5\n",
-    "    [0,  0,  0,  0,  0,  0,  0,  1],  # 6\n",
-    "    [0,  0,  0,  0,  0,  0,  0,  0],  # 7\n",
-    "]\n",
-    "\n",
-    "source = 0\n",
-    "sp_distances = sssp(source, graph)\n",
-    "print(f\"{sp_distances=}\")\n",
-    "sp_predecessors = reconstruct_path(sp_distances, source, graph)\n",
-    "print(f\"{sp_predecessors=}\")\n",
-    "report_sssp(sp_predecessors, sp_distances, graph)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "532990f7",
-   "metadata": {},
-   "source": [
-    "\n",
-    "---\n",
-    "\n",
-    "# Everything in a single method\n",
-    "\n",
-    "Typically, the SSSP is implemented as a single method computing both shortest path distances and predecessors for each vertix -- except, of course, the source vertex. The purpose of this exercise is to demonstrate a useful characteristic of *dynamic programming:* such algorithms solve problems in two parts, like we did in this assignment. Fortunately, the SSSP can be done in a single pass, as shown below. The modifications are shown with comments marked with `#####`.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d217ee39",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([0, 5, 1, 2, 10, 3, 4, 5], [None, 0, 0, 2, 0, 3, 5, 6])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# fmt: off\n",
-    "\n",
-    "def sssp_combined(s, G):\n",
-    "    n: int = len(G)                         # Shortcut to size of graph\n",
-    "    no_edge = G[0][0]                       # Shortcut to absence of edge\n",
-    "    oo = float(\"inf\")                       # Shortcut to infinity\n",
-    "    d: list = [oo for _ in range(n)]        # Assume looooong distances\n",
-    "    d[s] = 0                                # Source distance to itself\n",
-    "    p: list = [None for _ in range(n)]      ##### Assume no predecessors\n",
-    "    bag = [s]                               # Start from source\n",
-    "    while len(bag) > 0:                     # While bag not empty\n",
-    "        u = bag.pop()                       # Take a vertex out of bag\n",
-    "        for v in range(n):                  # Find u's neighbors\n",
-    "            if G[u][v] != no_edge:          # There is an edge (u,v)\n",
-    "                if d[v] > d[u] + G[u][v]:   # Is edge (u,v) tense?\n",
-    "                    d[v] = d[u] + G[u][v]   # Relax the edge\n",
-    "                    p[v] = u                ##### Record predecessor of v\n",
-    "                    bag.append(v)           # Explore v next\n",
-    "    return d, p                             ##### Return distances and predecessors\n",
-    "\n",
-    "print(sssp_combined(source, graph))"
+    "# Assignment 06 - \n"
    ]
   }
  ],
