--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -240,7 +240,9 @@
     "![](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/huffman/huffman_decoder.png)\n",
     "\n",
     "\n",
-    "</center>"
+    "</center>\n",
+    "\n",
+    "One *big* question here is *how* to pass the Huffman tree in the decoding process? The obvious answer is to pass the root of the tree (and therefore the entire tree) as an argument to the appropriate method, together with the encoded message that we would like to decode. This works fine for illustrative demonstrations of encoding/decoding. However, if we wish to encode a message and transmit it over a network, it is not clear how to also transmit a binary tree. In such cases we'll need to [serialize](https://en.wikipedia.org/wiki/Serialization) the object. For now, we don't have to worry about serialization."
    ]
   },
   {
