--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -242,7 +242,42 @@
     "\n",
     "</center>\n",
     "\n",
-    "One *big* question here is *how* to pass the Huffman tree in the decoding process? The obvious answer is to pass the root of the tree (and therefore the entire tree) as an argument to the appropriate method, together with the encoded message that we would like to decode. This works fine for illustrative demonstrations of encoding/decoding. However, if we wish to encode a message and transmit it over a network, it is not clear how to also transmit a binary tree. In such cases we'll need to [serialize](https://en.wikipedia.org/wiki/Serialization) the object. For now, we don't have to worry about serialization."
+    "One *big* question here is *how* to pass the Huffman tree in the decoding process? The obvious answer is to pass the root of the tree (and therefore the entire tree) as an argument to the appropriate method, together with the encoded message that we would like to decode. This works fine for illustrative demonstrations of encoding/decoding. However, if we wish to encode a message and transmit it over a network, it is not clear how to also transmit a binary tree. In such cases we'll need to [serialize](https://en.wikipedia.org/wiki/Serialization) the object. For now, we don't have to worry about serialization.\n",
+    "\n",
+    "It is important to assess the quantitative merits of the encoding. In our example of encoding `HELLO WORLD`, we went from 88 bits in plain ASCII to 32 bits of Huffman codes. That's nearly a 60% reduction in the space required for the message. **However,** it would take about 3,200 bytes to store the Huffman tree. In other words, we need an additional 25,600 bits to compress an 88 bit message down to 32 bits. That's not very efficient.\n",
+    "\n",
+    "Your code should include functionality that measures how many bits we save with the Huffman encoding, but also how many bits we need to store the Huffman tree. To measure how much memory is required for an object (such as the root of a tree, and therefore the tree itself), you'll need a tool like [`pympler.asizeof.asizeof`](https://pympler.readthedocs.io/en/latest/#). To use it:\n",
+    "\n",
+    "```python\n",
+    "from pympler import asizeof\n",
+    "# ... and later\n",
+    "memory_required = asizeof.asieof(some_object)\n",
+    "```\n",
+    "\n",
+    "`pympler` is not part of the basic Python distribution and you may have to install it before importing it. From the command line interface you can type\n",
+    "\n",
+    "```text\n",
+    "pip install pympler\n",
+    "```\n",
+    "\n",
+    "If you prefer to install directly from a Jupyter notebook, use\n",
+    "\n",
+    "```text\n",
+    "!pip install pympler\n",
+    "```\n",
+    "in the first line of your code (note the exclamation point at the beginning of the line).\n",
+    "\n",
+    "To test the efficiency of encoding, you may use any of the **plain text** versions of the books in [Project Gutenberg ](https://www.gutenberg.org/) as inputs. My favorite one is James Joyce's *Ulysses* because it's massive. For this testing, you may want to brush your Python [file reading skills](https://docs.python.org/3/tutorial/inputoutput.html#reading-and-writing-files)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6766d53",
+   "metadata": {},
+   "source": [
+    "## What to submit?\n",
+    "\n",
+    "A single **`.py`** file with your code, uploaded on Sakai."
    ]
   },
   {
@@ -257,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "315d6248",
    "metadata": {},
    "outputs": [],
