--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "## What to submit?\n",
     "\n",
-    "A single **`.py`** file with your code, uploaded on Sakai."
+    "A single **`.py`** file with your code, uploaded on Sakai. As always, your best coding skills should shine through this assignment."
    ]
   },
   {
