--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -265,7 +265,7 @@
     "```text\n",
     "!pip install pympler\n",
     "```\n",
-    "in the first line of your code (note the exclamation point at the beginning of the line).\n",
+    "in the first line of your code (note the exclamation point at the beginning of the line when invoked from the code. The exclamation point is not needed when installing from the CLI).\n",
     "\n",
     "To test the efficiency of encoding, you may use any of the **plain text** versions of the books in [Project Gutenberg ](https://www.gutenberg.org/) as inputs. My favorite one is James Joyce's *Ulysses* because it's massive. For this testing, you may want to brush your Python [file reading skills](https://docs.python.org/3/tutorial/inputoutput.html#reading-and-writing-files)."
    ]
