--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "<center>\n",
     "\n",
-    "![Huffman tree](../images/huffman_tree.png)\n",
+    "![Huffman tree](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/huffman/huffman_tree.png)\n",
     "\n",
     "_A Huffman tree for the message `HELLO WORLD`. Leaf nodes representing the most frequent symbols (for example, L with frequency 3) are closer to the root of the tree than less frequent symbols. Any node that is not a leaf, stores the combined frequencies of each children nodes._\n",
     "\n",
@@ -169,7 +169,7 @@
     "\n",
     "<center>\n",
     "\n",
-    "![Huffman tree](../images/huffman_tree.png)\n",
+    "![Huffman tree](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/huffman/huffman_tree_smaller.png)\n",
     "\n",
     "</center>\n",
     "\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "315d6248",
    "metadata": {},
    "outputs": [],
