--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "<center>\n",
     "\n",
-    "| H    | E    | L  | O   | ⎵   | W   | R   | D   |\n",
+    "| H    | E    | L  | O   | spc | W   | R   | D   |\n",
     "|------|------|----|-----|-----|-----|-----|-----|\n",
     "| 0000 | 0001 | 01 | 001 | 100 | 101 | 110 | 111 |\n",
     "\n",
