--- a/week06/assignment.ipynb
+++ b/week06/assignment.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "</center>\n",
     "\n",
-    "Using this codes, the `HELLO WORLD` message is encoded as\n",
+    "Using these codes, the `HELLO WORLD` message is encoded as\n",
     "\n",
     "```text\n",
     "00000001010100110010100111001111\n",
