--- a/week05/assignment.ipynb
+++ b/week05/assignment.ipynb
@@ -167,9 +167,7 @@
     "* **Correctness checking (Borůvka vs Kruskal MST weight):** 15%\n",
     "* **Timing methodology (fair, repeated trials, clean measurement):** 25%\n",
     "* **Results presentation (tables/plots):** 15%\n",
-    "* **Professional analysis & discussion:** 20%\n",
-    "\n",
-    "- \n"
+    "* **Professional analysis & discussion:** 20%"
    ]
   },
   {
