--- a/week07/newton.ipynb
+++ b/week07/newton.ipynb
@@ -9,15 +9,15 @@
     "\n",
     "## Reading\n",
     "\n",
-    "* [The source of the technique discussion in class](https://web.mit.edu/6.001/6.037/sicp.pdf): see pages 28-31 from the *Structure and Interpretation of Computer Programs* (SICP). The code is written in LISP, which is explained in pages 1-28. SICP is among **my [top-10 books](https://lgreco.github.io/cdp/Top10.html)** in computer science.\n",
+    "- [The source of the technique discussion in class](https://web.mit.edu/6.001/6.037/sicp.pdf): see pages 28-31 from the _Structure and Interpretation of Computer Programs_ (SICP). The code is written in LISP, which is explained in pages 1-28. SICP is among **my [top-10 books](https://lgreco.github.io/cdp/Top10.html)** in computer science.\n",
     "\n",
-    "* [The Method of Fluxions](https://archive.org/details/methodoffluxions00newt/page/n3/mode/2up) by Isaac Newton. This is the beginning of calculus and untold suffering of millions of college students since. It is listed here for its historic value.\n",
+    "- [The Method of Fluxions](https://archive.org/details/methodoffluxions00newt/page/n3/mode/2up) by Isaac Newton. This is the beginning of calculus and untold suffering of millions of college students since. It is listed here for its historic value.\n",
     "\n",
-    "* [A biography of Gottfried Wilhelm Leibnitz](https://etc.usf.edu/lit2go/218/a-short-account-of-the-history-of-mathematics/5539/gottfried-wilhelm-leibnitz/) including a description of the calculus controversy -- over who had first invented calculus: Newton or Leibnitz.\n",
+    "- [A biography of Gottfried Wilhelm Leibnitz](https://etc.usf.edu/lit2go/218/a-short-account-of-the-history-of-mathematics/5539/gottfried-wilhelm-leibnitz/) including a description of the calculus controversy -- over who had first invented calculus: Newton or Leibnitz.\n",
     "\n",
-    "* Peter Deuflhard's [brief history of Newton's method](https://ems.press/content/book-chapter-files/27348).\n",
+    "- Peter Deuflhard's [brief history of Newton's method](https://ems.press/content/book-chapter-files/27348).\n",
     "\n",
-    "* A more extensive [historical review by Tjalling J Ypma](./NewtonRaphson_SIAMRev.pdf)\n",
+    "- A more extensive [historical review by Tjalling J Ypma](./NewtonRaphson_SIAMRev.pdf)\n",
     "\n",
     "---\n",
     "\n",
@@ -92,9 +92,9 @@
     "    # The maximum error allowed in the result.\n",
     "    # The smaller the tolerance, the more accurate the result,\n",
     "    # but the more iterations it will take to compute.\n",
-    "    _DEFAULT_TOLERANCE: float = 0.1\n",
+    "    _DEFAULT_ACCURACY: float = 0.1\n",
     "\n",
-    "    def __init__(self, tolerance: float = _DEFAULT_TOLERANCE) -> None:\n",
+    "    def __init__(self, accuracy: float = _DEFAULT_ACCURACY) -> None:\n",
     "        \"\"\"Initialize the object with the given tolerance.\"\"\"\n",
     "        # The value whose square root I am looking for.\n",
     "        # I need to store it as an instance variable because\n",
@@ -104,7 +104,7 @@
     "        self._z: float = 0\n",
     "        # The tolerance for the approximation. This is a parameter that\n",
     "        # controls the accuracy of the result.\n",
-    "        self._tolerance: float = tolerance\n",
+    "        self._tolerance: float = accuracy\n",
     "\n",
     "    def _average(self, a: float, b: float) -> float:\n",
     "        \"\"\"Return the average of a and b.\"\"\"\n",
@@ -175,8 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def good_enough(guess: float, z: float, tolerance: float) -> bool:\n",
-    "    return abs(guess * guess - z) <= tolerance\n",
+    "def good_enough(guess: float, z: float, accuracy: float) -> bool:\n",
+    "    return abs(guess * guess - z) <= accuracy\n",
     "\n",
     "\n",
     "def average(a: float, b: float) -> float:\n",
@@ -187,10 +187,14 @@
     "    return average(guess, z / guess)\n",
     "\n",
     "\n",
-    "def iterative_sqrt(z: float, tolerance: float) -> float:\n",
+    "def iterative_sqrt(z: float, accuracy: float, stop_after: int = 100) -> float:\n",
+    "    \"\"\"Return the square root of z using an iterative method. The method will stop when the guess is good enough or when the number of iterations exceeds stop_after. This is done to prevent infinite loops in case of very, very,\n",
+    "    small accuracy values.\"\"\"\n",
     "    current_guess: float = 1.0\n",
-    "    while not good_enough(current_guess, z, tolerance):\n",
+    "    iterations: int = 0\n",
+    "    while not good_enough(current_guess, z, accuracy) and iterations < stop_after:\n",
     "        current_guess = improve(current_guess, z)\n",
+    "        iterations += 1\n",
     "    return current_guess"
    ]
   },
