--- a/week07/newton.ipynb
+++ b/week07/newton.ipynb
@@ -40,19 +40,19 @@
     "$$\n",
     "\\begin{align*}\n",
     "x_{n+1} & = x_n - \\frac{f(x_n)}{f'(x_n)}\n",
-    "        && (\\text{Definition of Newton's approximation}) \\\\\n",
+    "        && (\\text{Definition of Newton's approximation}) \\\\ \\\\\n",
     "        & = x_n - \\frac{x_n^2-z}{2x_n}\n",
-    "        && (\\text{Substitute}\\ f=x^2-z; f'=2x) \\\\\n",
+    "        && (\\text{Substitute}\\ f=x^2-z;\\, f'=2x) \\\\ \\\\\n",
     "        & = \\frac{2x^2_n-(x_n^2-z)}{2x_n}\n",
-    "        && (\\text{Merge fractions})  \\\\\n",
+    "        && (\\text{Merge fractions})  \\\\ \\\\\n",
     "        & = \\frac{x^2_n+z}{2x_n}\n",
-    "        && (\\text{Simplify numerator}) \\\\\n",
+    "        && (\\text{Simplify numerator}) \\\\ \\\\\n",
     "        & = \\frac{x^2_n}{2x_n} + \\frac{z}{2x_n}\n",
-    "        && (\\text{Separate fractions}) \\\\\n",
+    "        && (\\text{Separate fractions}) \\\\ \\\\\n",
     "        & = \\frac{x_n}{2} + \\frac{z}{2x_n}\n",
-    "        && (\\text{Simplify first fraction})  \\\\\n",
+    "        && (\\text{Simplify first fraction})  \\\\ \\\\\n",
     "        & = \\frac{1}{2} \\left({x_n} + \\frac{z}{x_n}\\right)\n",
-    "        && (\\text{Factor out}\\ \\tfrac{1}{2})  \\\\\n",
+    "        && (\\text{Factor out}\\ \\tfrac{1}{2}) \n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
